# edge-tts-server

./: README.md  edge-tts-client.user.js  monitor_clipboard.py  pyproject.toml  qt_app.py  reader.html  reader.js  server.py
cliptalk/: __main__.py  cliptalk.html  cliptalk.js  config.py  qt_server.py
cliptalk/engines/: __init__.py  edge.py  sapi.py
cliptalk/engines/piper/: __init__.py
cliptalk/engines/piper/voices/: download.py
edge_tts_server/: __init__.py  __main__.py  config.json  config.py  lib.py  logging_.py  monitor_clipboard.py  qt_server.py  reader.css  reader.html  reader.js  server.py
edge_tts_server/engines/: __init__.py  edge.py  sapi.py
edge_tts_server/engines/piper/: __init__.py
edge_tts_server/engines/piper/voices/: README.md
edge_tts_server/voices/: README.md
extension/: background.js  manifest.json  offscreen.js  popup.html  popup.js
