[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'edge-tts-server'
authors = [{ name = '5j9', email = '5j9@users.noreply.github.com' }]
readme = 'README.md'
requires-python = '>=3.12'
dependencies = ['PyQt6', 'aiohttp', 'edge_tts']
dynamic = ['version']
description = 'A Python program than monitors clibboard and reads the modified clibboard text.'

[project.urls]
Homepage = 'https://github.com/5j9/edge-tts-server'

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'I',  # isort
    'UP',  # pyupgrade
]
lint.ignore = [
    'UP027',  # list comprehensions are faster than generator expressions
    'E721',  # Do not compare types, use `isinstance()`
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'