[build-system]
requires = ['uv_build>=0.8.3,<0.9.0']
build-backend = 'uv_build'

[project]
name = 'edge-tts-server'
description = 'A Python program than monitors clibboard and reads the modified clibboard text.'
version = '2025.09.19'
authors = [{ name = '5j9', email = '5j9@users.noreply.github.com' }]
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'PyQt6',
    'aiohttp',
    'edge_tts>=7.2.6',
    "loguru>=0.7.3",
    "piper-tts>=1.3.0",
]

[project.optional-dependencies]
piper = ["piper-tts>=1.3.0"]
sapi = ["pywin32"]

[dependency-groups]
dev = [
  "edge-tts-server[sapi]",
]

[project.urls]
Homepage = 'https://github.com/5j9/edge-tts-server'

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',  # flake8-future-annotations
    'I',  # isort
    'UP',  # pyupgrade
    'RUF', # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',  # Do not compare types, use `isinstance()`
    'RUF001',  # ambiguous-unicode-character-string	
    'RUF002',  # ambiguous-unicode-character-docstring
    'RUF003',  # ambiguous-unicode-character-comment
    'RUF012',  # mutable-class-default
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'

[tool.uv.build-backend]
module-root = ""
module-name = "cliptalk"

[tool.pyright]
typeCheckingMode = 'standard'
reportInvalidStringEscapeSequence = false
reportConstantRedefinition = 'error'
reportDeprecated = 'warning'
reportPropertyTypeMismatch = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryCast = 'warning'
reportUnnecessaryComparison = 'warning'
reportUnnecessaryContains = 'warning'
reportUnnecessaryIsInstance = 'warning'
reportUnnecessaryTypeIgnoreComment = 'warning'
